examples/test/testpolicy19752.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19752
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key48: value26
      key16: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value35
          key46: value32
          key12: value40
      podSelector:
        matchLabels:
          key8: value46
          key26: value40
          key11: value30
